<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/money"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <!-- Título de la app -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_calculator"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="262dp" />

    <!-- Input del pago total -->
    <EditText
        android:id="@+id/etPagoTotal"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_total_bill"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="611dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCalcular"
        app:layout_constraintTop_toBottomOf="@id/tvPropina"
        />

    <!-- Selector de porcentaje de propina -->

    <TextView
        android:id="@+id/tvPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/select_tip_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/etPagoTotal"
        app:layout_constraintEnd_toStartOf="@+id/spinnerPorcentaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal_a_Pagar"
        android:layout_marginTop="80dp"/>

    <Spinner
        android:id="@+id/spinnerPorcentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:entries="@array/options"
        app:layout_constraintBottom_toTopOf="@+id/etPagoTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPropina"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal_a_Pagar"
        android:layout_marginTop="80dp"/>


    <Button
        android:id="@+id/btnCalcular"
        style="@style/BlackBackgroundStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="528dp"
        />

    <!-- Resultado de la propina -->

    <!-- Total con propina incluida -->
    <TextView
        android:id="@+id/tvResultadoPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tip"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="631dp" />

    <TextView
        android:id="@+id/tvTotal_a_Pagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/total_to_pay"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultadoPropina"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="659dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/tvCantidadIngresada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amount_entered"
        app:layout_constraintBottom_toTopOf="@+id/tvPropina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal_a_Pagar" />


</androidx.constraintlayout.widget.ConstraintLayout>
